--- a/client/src/pages/Details.css
+++ b/client/src/pages/Details.css
@@ -32,7 +32,7 @@
     }
 
 .details-content-label {
-    padding-right: 10px;
+    padding-right: 5px;
 }
 
 .details-content-riddle {
@@ -42,6 +42,11 @@
     font-style: italic;
     margin: 15px 10px;
     position: fixed;
+    text-align: center;
+}
+
+.got-number {
+    font-size: small;
 }
 
 ul {
