--- a/client/src/pages/Details.css
+++ b/client/src/pages/Details.css
@@ -19,7 +19,7 @@
     border-radius: 10px;
     color: #FFFFFF;
     margin: 15px 10px;
-    margin-top: 75px;
+    margin-top: 20%;
     position: absolute;
     padding: 0px 10px;
     top: 0;
